# bazel-monorepo

./: .gitignore  WORKSPACE.bazel
.github/workflows/: main.yml
projects/calculator/: calculator.test.py
projects/go_hello/: BUILD.bazel  hello_world.go  hello_world.test.go
projects/go_web/: BUILD.bazel  main.go
projects/my-python-app/: main.py
projects/projectB/: BUILD.bazel
projects/python_calculator/: BUILD.bazel  calculator.py  calculator.test.py
projects/python_web/: BUILD.bazel
